# backtesting

./: README.md  setup.cfg
src/: buy_n_hold.py  heatmap.py  index.py
src/backtesting/: result.py  utils.py
