[metadata]
name = backtest-johnb8005
version = 0.0.1
author = johnb
author_email = johan@nexys.ch
description = Simple backtest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tradealpha/backtest
project_urls =
    Bug Tracker = https://github.com/tradealpha/backtest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src